[package]
name = "colors_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.12.4", features = ["blocking"]} 
scraper = "0.19.0"
select = "0.6.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }